--- a/project-manager.html
+++ b/project-manager.html
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://tetratech.referrals.selectminds.com/jobs/senior-program-manager-14843'>Senior Program Manager - Tetra Tech Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/senior-program-manager-14843'>Senior Program Manager - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CarrWorkplaces/743999688833941-senior-project-manager-construction'>Carr Workplaces Senior Project Manager, Construction | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CarrWorkplaces/743999688833941-senior-project-manager-construction'>Carr Workplaces Senior Project Manager, Construction | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC Washington, D.C.</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light">Cape Town Cape Town</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CommunityHealthcareNetwork/743999692391688-program-manager-lgbtq-programs-'>Community Healthcare Network Program Manager (LGBTQ Programs) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CommunityHealthcareNetwork/743999692391688-program-manager-lgbtq-programs-'>Community Healthcare Network Program Manager (LGBTQ Programs) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -219,7 +219,7 @@ b?dzie odpowiedzialna za nadzorowanie, koordynowanie i optymalizacj??...</p>
 <p>3 days ago ... We are looking for a Project Manager to take leadership role who facilitates and 
 supports our teams in delivering high value solutions to our customers.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scmt.join.com/jobs/274452-dual-master-m-f-d-project-manager'>dual master (m/f/d) project manager</a></h5> 
+<h5><a href='https://scmt.join.com/jobs/274452-dual-master-m-f-d-project-manager'>dual master (m/f/d) project manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Steinbeis Center of Management and Technology GmbH has a job opening for 
 DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
@@ -232,7 +232,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/44580e828ddb-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/44580e828ddb-assistant-project-manager'>Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -252,7 +252,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
     Inspection Program Manager - 0748-2 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -312,7 +312,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999692408547-project-manager-at-bentonville-ar'>American IT Staff Project Manager at Bentonville, AR | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999692408547-project-manager-at-bentonville-ar'>American IT Staff Project Manager at Bentonville, AR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -356,11 +356,11 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/B0R8UQlcl7/Project-Manager-III'>Project Manager III - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/B0R8UQlcl7/Project-Manager-III'>Project Manager III - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -376,7 +376,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://thalle.recruiterbox.com/jobs/fk031qj'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://thalle.recruiterbox.com/jobs/fk031qj'>
     Project Manager -Heavy Civil Construction  at Thalle Construction  Company
 </a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
@@ -398,7 +398,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light">California North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1780971'>Job Application for Technical Program Manager at Fitbit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1780971'>Job Application for Technical Program Manager at Fitbit</a></h5> 
 <p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -420,7 +420,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/netflix/a6cc51ea-ff65-414f-ae1e-511af6e42945'>Netflix - Talent Mobility Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/a6cc51ea-ff65-414f-ae1e-511af6e42945'>Netflix - Talent Mobility Program Manager</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -444,7 +444,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1785288'>Job Application for Project Manager - New Factory: Composites Production at Lilium</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1785288'>Job Application for Project Manager - New Factory: Composites Production at Lilium</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
